--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,1 @@
-*.pyc
-__pycache__
-.DS_Store
-.vscode
-.pypirc
-*/tmp/*
-build/*
-dist/*
-*.egg-info
-.python-version
-logs/%
-.coverage
-locustfile.py
-
-_build
+site/*
