--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,6 @@
 site_name: HttpRunner 中文使用手册
 pages:
-    - Home: index.md
-    - 总体介绍: Introduction.md
+    - 介绍: index.md
     - 安装说明: Installation.md
     - 快速上手: quickstart.md
     - 准备测试用例: prepare-testcases.md
@@ -11,4 +10,3 @@ pages:
     - 开发日志: development.md
     - 常见问题: FAQ.md
 theme: material
-# repo_url: https://github.com/httprunner/httprunner
