--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,11 @@ pages:
     - 安装说明: Installation.md
     - 快速上手: quickstart.md
     - 准备测试用例: prepare-test.md
-    - 运行测试用例: run-test.md
     - 数据驱动: data-driven.md
+    - 测试用例分层: testcase-layer.md
+    - 运行测试用例: run-test.md
+    - 测试报告: report.md
     - 性能测试: load-test.md
-    - 开发日志: development.md
+    - 开发文档: development.md
     - 常见问题: FAQ.md
 theme: material
