--- a/docs/data/demo-quickstart-6.yml
+++ b/docs/data/demo-quickstart-6.yml
@@ -1,7 +1,7 @@
 - config:
     name: testset description
     parameters:
-        - user_id: Sequential
+        - user_id: [1001, 1002, 1003, 1004]
     variables:
         - device_sn: ${gen_random_string(15)}
         - user_id: 1000
