--- a/docs/data/demo-quickstart-5.yml
+++ b/docs/data/demo-quickstart-5.yml
@@ -13,9 +13,9 @@
 - test:
     name: /api/get-token
     variables:
-        user_agent: "iOS/10.3"
-        os_platform: "ios"
-        app_version: "2.8.6"
+        - user_agent: "iOS/10.3"
+        - os_platform: "ios"
+        - app_version: "2.8.6"
     request:
         url: /api/get-token
         method: POST
