--- a/docs/data/demo-quickstart-2.yml
+++ b/docs/data/demo-quickstart-2.yml
@@ -5,6 +5,8 @@
         headers:
             User-Agent: python-requests/2.18.4
     variables: []
+    output:
+        - token
 
 - test:
     name: /api/get-token
