--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,10 +57,12 @@ pages:
     - 运行测试: run-test.md
     - 测试报告: report.md
     - 高级特性:
-        - hook 机制: advanced/request-hook.md
+        - hook机制: advanced/request-hook.md
+        - 环境变量: advanced/dot-env.md
         - 数据驱动: advanced/data-driven.md
         - 测试用例分层: advanced/testcase-layer.md
-        - 信息安全: advanced/security.md
+    - 最佳实践:
+        - 信息安全: best-practices/security.md
     - 性能测试: load-test.md
     - 开发扩展: development.md
     - 常见问题: FAQ.md
