add project filetype docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
     - 介绍: index.md
     - 核心概念:
         - 架构图: concept/architecture.md
+        - 项目文件类型: concept/filetype.md
     - 安装说明: Installation.md
     - 快速上手: quickstart.md
     - 测试用例:
